<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/accent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.InfoAppAct">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarInfoApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp">

            <ImageButton
                android:id="@+id/imgBack"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:background="@android:color/transparent"
                android:onClick="Back"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_arrow_back"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_toEndOf="@id/imgBack"
                android:fontFamily="@font/poppins"
                android:text="@string/profile"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </com.google.android.material.appbar.MaterialToolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/linearProfile"
            android:layout_marginTop="-140dp"
            android:background="@drawable/bg_info" />

        <ImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="-20dp"
            android:layout_marginEnd="-60dp"
            android:src="@drawable/ic_air_conditioner"
            app:tint="@color/monitor" />

        <LinearLayout
            android:id="@+id/linearProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgProfile"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_marginTop="90dp"
                android:src="@drawable/img_widi" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins"
                android:text="@string/programmer_name"
                android:textColor="@color/primary_text"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/pengembang" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearProfile"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/poppins"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textColor="@color/primary_text"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/app_version"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins"
                    android:gravity="center"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/poppins"
                    android:gravity="center"
                    android:text="@string/name_pembimbing_i"
                    android:textColor="@color/primary_text"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:gravity="center"
                    android:text="@string/pembimbing_i" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins"
                    android:gravity="center"
                    android:text="@string/name_pembimbing_ii"
                    android:textColor="@color/primary_text"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:gravity="center"
                    android:text="@string/pembimbing_ii" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/poppins"
                    android:gravity="center"
                    android:text="@string/prodi_name"
                    android:textColor="@color/primary_text"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins"
                    android:gravity="center"
                    android:text="@string/major_name"
                    android:textColor="@color/primary_text"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins"
                    android:gravity="center"
                    android:text="@string/faculty_name"
                    android:textColor="@color/primary_text"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins"
                    android:gravity="center"
                    android:text="@string/campus_name"
                    android:textColor="@color/primary_text"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins"
                    android:gravity="center"
                    android:text="@string/years"
                    android:textColor="@color/primary_text"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/desc_app"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="62dp"
                    android:fontFamily="@font/poppins"
                    android:justificationMode="inter_word"
                    android:text="@string/desc" />

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>


</RelativeLayout>