<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainAct">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp">

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/poppins"
                android:textColor="@color/secondary_text"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvTime"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppins"
                android:text="@string/hello"
                android:textColor="@color/secondary_text"
                android:textSize="17sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imgProfile"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentEnd="true"
                android:scaleType="fitXY"
                android:src="@drawable/img_widi" />
        </RelativeLayout>
    </com.google.android.material.appbar.MaterialToolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbarMain">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardMain"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="18dp"
                android:orientation="vertical"
                app:cardCornerRadius="16dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_main_2">

                    <ImageView
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="-8dp"
                        android:layout_marginBottom="-28dp"
                        android:src="@drawable/circle" />

                    <ImageView
                        android:layout_width="160dp"
                        android:layout_height="160dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="-60dp"
                        android:layout_marginEnd="-25dp"
                        android:src="@drawable/circle2" />

                    <ImageView
                        android:layout_width="210dp"
                        android:layout_height="140dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginEnd="-54dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_smart_ac" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="24dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvCalender"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:fontFamily="@font/poppins"
                            android:textColor="@color/monitor"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:fontFamily="@font/poppins"
                            android:text="@string/air_conditioner"
                            android:textColor="@color/white"
                            android:textSize="19sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:fontFamily="@font/poppins"
                            android:text="2"
                            android:textColor="@color/white"
                            android:textSize="38sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </RelativeLayout>


            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/titleDevice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardMain"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/poppins"
                android:text="@string/air_conditioner"
                android:textColor="@color/primary_text"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/titleDevice">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/ac_samsung"
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:foreground="?attr/selectableItemBackground"
                        android:orientation="horizontal"
                        android:paddingHorizontal="32dp">

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="match_parent"
                            android:src="@drawable/ic_air_conditioner"
                            app:tint="@color/secondary_text" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="16dp"
                            android:fontFamily="@font/poppins"
                            android:text="@string/ac_samsung"
                            android:textColor="@color/primary_text"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ac_lg"
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:foreground="?attr/selectableItemBackground"
                        android:orientation="horizontal"
                        android:paddingHorizontal="32dp">

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="match_parent"
                            android:src="@drawable/ic_air_conditioner"
                            app:tint="@color/secondary_text" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="16dp"
                            android:fontFamily="@font/poppins"
                            android:text="@string/ac_lg"
                            android:textColor="@color/primary_text"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>